Cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
  labels:
    app: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
      - name: auth-app
        image: alpacron/auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: auth-secret
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  selector:
    app: auth-app
  ports:
    - name: port1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: port2
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: alpacron/gateway:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: auth-secret
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: port1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: port2
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
      - path: /(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
